@@ -49,6 +49,7 @@ public class RenderRegister {
         INSTANCE.register(ENTITIES.WATER_MAGE, (dispatcher, context) -> new MageMobRenderer(dispatcher, "water_mage.png"));
         INSTANCE.register(ENTITIES.NATURE_MAGE, (dispatcher, context) -> new MageMobRenderer(dispatcher, "nature_mage.png"));
         INSTANCE.register(ENTITIES.THUNDER_MAGE, (dispatcher, context) -> new MageMobRenderer(dispatcher, "thunder_mage.png"));
+        INSTANCE.register(ENTITIES.HEALER_MAGE, (dispatcher, context) -> new MageMobRenderer(dispatcher, "healer_mage.png"));
 
     }
 }
