@@ -90,3 +90,4 @@
 "entity.mmorpg.fire_mage": "Fire Magus",
 "entity.mmorpg.water_mage": "Frost Magus",
 "entity.mmorpg.thunder_mage": "Lightning Magus",
+"entity.mmorpg.healer_mage": "Healing Magus",
