@@ -43,6 +43,7 @@ World should be a lot more lively now!
 Currently there's variations of: zombies, spiders and slimes!
 I also added 2 special kinds of mobs: mages and arcane mobs.
 Mages will cast elemental bolts at you and arcane mobs steal your mana.
+There's also healer mages that run to nearest mob and heal them!
 
 AREA UPDATE:
 
